# italco-be

./: .env.sample  .env.test  .gitignore  .gitlab-ci.yml  .replit  Dockerfile  Listino Coppola est.xls  README.md  alembic.ini  docker-compose.yml  listino euronics con id.xlsx  pyproject.toml  pytest.ini  replit.nix  requirements.txt
.gitlab/: deploy.yml
assets/: caps.json
docs/: factory-explain.md  factory-tests-explain.md  flussi-ordine-explain.md  flussi-ordine-test-matrix.md  spunti_e_bug_trovati.md
gitlab/: database.yml  deploy.yml  housekeeping.yml  lint.yml  operations.yml  ssh-setup.yml  test.yml
scripts/: __main__.py  caps_file.py  check_log_nulls.py  check_photos_in_2_folder.py  euronics_data_fix.py  export_csv_orders.py  fix_log_nulls.py  fix_missing_delivery_groups.py  investigate_bug.py  migrate_logs_to_files.py  migrate_order_product.py  order_delivery_date.py  photos.json  print_missing_photos.py  purge_log_nulls.py  rae_dtr_bonifica.py  refactor_photo_pt1.py  refactor_photo_pt2.py  refactor_photo_pt3.py  refactor_photo_pt4.py  refactor_photo_pt5.py  refactor_photo_pt6.py  schedule.json  update_service_user_codes.py  vecchia_bonifica.py
src/: __init__.py  __main__.py  checks.py  cron_job.py  scheduler.py
src/assets/: caps.json  missing_photos.txt  swagger.json
src/database/: 5ba3c095aaf6_schedule.py  enum.py  events.py  schema.py  seed.py
src/end_points/: __init__.py  addressee.py  chatty.py  checks.py  collection_point.py  company.py  customer_group.py  customer_rule.py  customer_rules.py  delivery_group.py  excel_importation.py  export.py  exportation.py  geographic_zone.py  importation.py  log.py  order.py  pdf_importation.py  product.py  rae_product.py  schedule.py  service.py  transport.py  users.py
src/schedulation/: __init__.py  assigning.py  building.py  clustering.py
src/utils/: caps.py  date.py  file.py  log.py  query.py
static/: caps.json  swagger.json
templates/: disposal_attached_a.html  disposal_attached_b.html  disposal_card_index.html  disposal_pickup_list.html  order_delivery_photo.html  order_report.html  orders_invoice.html  rae_product.html  schedules_report.html
tests/: conftest.py  test_users_endpoints.py  utils.py
(+194 files in other folders)
