[project]
name = "italco-be"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "generic_lib[unix] @ git+https://github.com/hosting232323/generic-lib.git ; sys_platform != 'win32'",
    "generic_lib[win] @ git+https://github.com/hosting232323/generic-lib.git ; sys_platform == 'win32'",
    "xhtml2pdf",
    "pandas",
    "openpyxl",
    "hashids",
    "openai",
    "python-telegram-bot",
    "gunicorn",
    "geopy",
    "scipy",
    "pdfplumber",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "selenium>=4.0.0",
    "ruff>=0.0.241",
]

[tool.ruff]
line-length = 120
indent-width = 2

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
ignore = ["COM812"]

